<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx1"
        android:textSize="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest1"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:textSize="22dp"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/spnArray"
        android:id="@+id/spnQ1"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 pts"
        android:layout_marginLeft="35dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/r1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest2"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:textSize="22dp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/raG1">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest2Opc1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ2opcAlanKey">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest2Opc2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ2opcAlanFerreira">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest2Opc3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ2opcTonyStark">
        </RadioButton>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 pts"
        android:layout_marginLeft="35dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/r2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest3"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="22dp"
        android:layout_marginTop="10dp" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/raG2">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest3Opc1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ3opcPython">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest3Opc2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ3opcJavaScript">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest3Opc3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/rbQ3opcCpp">
        </RadioButton>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 pts"
        android:layout_marginLeft="35dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/r3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest4"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="22dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest4Opc1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/cbQ4opcHTML">
        </CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest4Opc2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/cbQ4opcKotlin">
        </CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resQuest4Opc3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/cbQ4opcJSON">
        </CheckBox>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 pts"
        android:layout_marginLeft="35dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/r4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">
        <Button
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCorrigir"
            android:layout_marginRight="10dp"
            android:onClick="btnCorrigir">
        </Button>
        <Button
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLimpar"
            android:layout_marginRight="35dp"
            android:onClick="btnLimpar">
        </Button>
    </LinearLayout>

</LinearLayout>